# trading-agent-workshop

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
agents/deep_agent/: agent.py
agents/engine_agent/: agent.py
images/: adlc.avif
modules/: 01_deep_agents.ipynb  01_langgraph.ipynb  02_deep_agents.ipynb  02_langsmith.ipynb  03_deploy.ipynb  03_deploy_and_govern.ipynb  04_langsmith.ipynb  05_engine.ipynb
utils/: engine.py  langsmith_rules.py  models.py  workshop.py
